# medlit-agent

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
config/: __init__.py  constants.py  settings.py
docker/: .dockerignore  Dockerfile  docker-compose.yml
scripts/: run_agent.py  upload_prompts.py
src/medlit/: __init__.py  main.py
src/medlit/agent/: __init__.py  medlit_agent.py
src/medlit/agent/tools/: __init__.py  evidence_fetch.py  pubmed_search.py  synthesize.py
src/medlit/config/: __init__.py  settings.py
src/medlit/models/: __init__.py  article.py  evidence.py  query.py  response.py
src/medlit/observability/: __init__.py  callbacks.py  langsmith.py  metrics.py
src/medlit/prompts/: __init__.py  registry.py
src/medlit/prompts/few_shot/: query_examples.json  synthesis_examples.json
src/medlit/prompts/system/: agent_system.txt  synthesis_system.txt
src/medlit/prompts/templates/: evidence_synthesis.txt  evidence_synthesis_tool.txt  query_generation.txt  response_format.txt
src/medlit/pubmed/: __init__.py  client.py  fetch.py  parser.py  search.py
src/medlit/utils/: __init__.py  cache.py  rate_limiter.py  validators.py
tests/: __init__.py  conftest.py
tests/evals/: __init__.py  evaluators.py  metrics.py  run_evals.py
tests/evals/datasets/: medical_qa.json
tests/integration/: __init__.py  test_agent_e2e.py  test_pubmed_live.py
tests/unit/: __init__.py  test_models.py  test_prompts.py  test_pubmed_parser.py  test_validators.py
